--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "build": "cd shoestore && npm install && npm run build && cp -r dist ../backend/dist",
+    "start": "cd backend && node server.js"
   },
   "keywords": [],
   "author": "",
