--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "scripts": {
     "install-all": "cd backend && npm install && cd ../shoestore && npm install",
-    "build": "cd shoestore && npm install && npm run build && mkdir -p ../backend/dist && cp -r dist/* ../backend/dist",
+    "build": "cd shoestore && npm install && npm run build && mkdir -p ../backend/dist && cp -r ./dist/* ../backend/dist",
     "start": "cd backend && npm install && node server.js"
   }
 }
